--- a/client.html
+++ b/client.html
@@ -13,12 +13,16 @@
     .pinned {background-color: rgb(255 255 0 / 15%); border-radius: 40px;}
     .messages-top {height: 620px; width: 1000px; display: flex;flex-direction: column;}
     .messages-bottom {height: 620px; width: 1000px; display: flex;flex-direction: column-reverse;}
-    .reactions { position: absolute; display: inline-block; background-color: #000000; height: 22; top: 50px; left: 173px; font-family: 'Noto Emoji'; color: #ffffff; border-radius: 11px; overflow: hidden;}
+    .reactions { position: absolute; display: flex; background-color: #000000; height: 23; top: 50px; left: 173px; font-family: 'Noto Emoji'; color: #ffffff; border-radius: 11px; overflow: hidden;}
     .reaction {vertical-align: top; font-size: 19;}
     .customReaction {height: 21px; margin-left: 2px;} 
     .portrait {position:absolute;clip-path: circle(30px at center);width: 64px;height: 64px;}
     .overlay {position:absolute; top: 7px; height: 64px; width: 64px;}
-    .message {position: relative; height: 64px; padding-left: 5px; padding-top: 5px; padding-bottom: 5px; font-family: 'Open Sans', sans-serif; font-size: 14px; overflow: hidden; min-height: 64px; margin-top: 5px;}
+    .textMessage {position: relative; height: 64px; padding-left: 5px; padding-top: 5px; padding-bottom: 5px; font-family: 'Open Sans', sans-serif; font-size: 14px; overflow: hidden; min-height: 64px; margin-top: 5px;}
+    .imageMessage {display: inline-block; z-index: 10; position: relative; height: 320px; padding-left: 5px; padding-top: 5px; padding-bottom: 5px; font-family: 'Open Sans', sans-serif; font-size: 14px; overflow: hidden; min-height: 64px; margin-top: 5px;}
+    .imgDecoration {left: 5px; position: absolute; top: 239px;}
+    .textDecoration {position: absolute; top: 0px;}
+    .msgImage {height:270px; margin-left: 68px}
     .twitchUsername {position:absolute; left: 72px; top: 53px; font-size: 12px; color: #FFFFFF; z-index: 1; background-color: #6441a5; border-radius: 4px; padding-left: 3px; padding-right: 3px; }
     .youtubeUsername {position:absolute; left: 72px; top: 53px; font-size: 12px; color: #FFFFFF; z-index: 1; background-color: #FF0000; border-radius: 4px; padding-left: 3px; padding-right: 3px; }
     .discordUsername {position:absolute; left: 72px; top: 53px; font-size: 12px; color: #FFFFFF; z-index: 1; background-color: #516DF8; border-radius: 4px; padding-left: 3px; padding-right: 3px; }
@@ -179,41 +183,61 @@
       var portrait = "<img class='portrait' referrerpolicy='no-referrer' src='"+portraitImg+"'\>"
       var username = "<span class='"+(usernameStyles[json.service])+"'>"+json.userName+"</span>"
 
-      messageText = document.createElement('span');
-      messageText.classList.add('msgtextShort');
-      messageText.innerHTML = json.messageHTML;
-      if(!isSmall(messageText)) {
-        messageText.className = ""
-        messageText.classList.add('msgtext');
-        var images = messageText.getElementsByTagName('img');
-        for(img of images) {
-          img.height = LONG_EMOTE_HEIGHT;
-          img.style.verticalAlign = 'middle';
-          img.style.paddingBottom = 2;
-        }
-      } else {
-        var images = messageText.getElementsByTagName('img');
-        for(img of images) {
-          img.height = SHORT_EMOTE_HEIGHT;
-          img.style.verticalAlign = 'middle';
-          img.style.paddingBottom = 2;
-        }
-      }
-
       message = document.createElement('div');
       if(json.id == 'null') {
+        console.log("Generating message ID, this should not happen");
         message.id = messageID++;
       } else {
         message.id = json.id;
       }
-      message.classList.add('message');
-      message.classList.add('fadePopInAndStay');
-      message.innerHTML = username+portrait+serviceOverlay;
-      message.appendChild(messageText)
+
+      var messageContents;
+
+      if(json.images.length > 0) {
+        message.classList.add('imageMessage');
+        messageContents = document.createElement('span');
+        messageContents.classList.add('imageMessage');
+
+        var bodyImage = "<img class='msgImage' referrerpolicy='no-referrer' src='"+json.images[0]+"'\>"
+        messageContents.innerHTML = bodyImage;
+        verticalStyle = 'imgDecoration'
+      } else {
+        message.classList.add('textMessage');
+
+        messageContents = document.createElement('span');
+        messageContents.classList.add('msgtextShort');
+        messageContents.innerHTML = json.messageHTML;
+        if(!isSmall(messageContents)) {
+          messageContents.className = ""
+          messageContents.classList.add('msgtext');
+          var images = messageContents.getElementsByTagName('img');
+          for(img of images) {
+            img.height = LONG_EMOTE_HEIGHT;
+            img.style.verticalAlign = 'middle';
+            img.style.paddingBottom = 2;
+          }
+        } else {
+          var images = messageContents.getElementsByTagName('img');
+          for(img of images) {
+            img.height = SHORT_EMOTE_HEIGHT;
+            img.style.verticalAlign = 'middle';
+            img.style.paddingBottom = 2;
+          }
+        }
+        verticalStyle = 'textDecoration'
+        
+      }
+
+      message.classList.add('fadePopInAndStay');     
+      message.appendChild(messageContents)
+      decorations = document.createElement('span');
+      decorations.classList.add(verticalStyle);
+      decorations.innerHTML = username+portrait+serviceOverlay;
+      message.appendChild(decorations)
 
       reactions = document.createElement('div');
       reactions.classList.add('reactions');
-      message.appendChild(reactions);
+      decorations.appendChild(reactions);
 
       json.reactions.forEach(reaction => {
         console.log('Adding reaction: '+reaction);
