--- a/client.new.html
+++ b/client.new.html
@@ -22,6 +22,9 @@
     <title>Chat Widget</title>
     <link rel="stylesheet" href="./client.new.css">
     <script type="text/javascript" src="./client.new.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Emoji:wght@700&display=swap" rel="stylesheet">
 </head>
